[gd_scene load_steps=4 format=3 uid="uid://c31ypkwqxkdsa"]

[ext_resource type="Script" uid="uid://cfeon2nk4s72a" path="res://scenes/battle/card_ui/card_visual.gd" id="1"]
[ext_resource type="Material" path="res://materials/materials/swirl_overlay_material.tres" id="2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.98, 0.98, 0.95, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.3, 0.3, 0.3, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0, 0, 0, 0.3)
shadow_size = 4
shadow_offset = Vector2(2, 2)

[node name="CardVisual" type="Control"]
custom_minimum_size = Vector2(200, 280)
layout_mode = 3
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
mouse_filter = 2
script = ExtResource("1")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="Header" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="CostLabel" type="Label" parent="VBox/Header"]
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.8)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 22
text = "1"

[node name="Spacer" type="Control" parent="VBox/Header"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1

[node name="TypeLabel" type="Label" parent="VBox/Header"]
layout_mode = 2
mouse_filter = 1
theme_override_font_sizes/font_size = 20
text = "⚔️"

[node name="ArtworkPlaceholder" type="ColorRect" parent="VBox"]
custom_minimum_size = Vector2(0, 110)
layout_mode = 2
mouse_filter = 1
color = Color(0, 0, 0, 1)

[node name="NameLabel" type="Label" parent="VBox"]
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 18
text = "Card Name"
horizontal_alignment = 1

[node name="TribeLabel" type="Label" parent="VBox"]
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_color = Color(0.85, 0.85, 0.85, 1)
theme_override_font_sizes/font_size = 12
text = "Tribe · Class"
horizontal_alignment = 1

[node name="KeywordsLabel" type="Label" parent="VBox"]
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_color = Color(1, 0.9, 0.5, 1)
theme_override_font_sizes/font_size = 13
horizontal_alignment = 1

[node name="DescriptionLabel" type="Label" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/font_size = 11
text = "Description text here"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Footer" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="Spacer2" type="Control" parent="VBox/Footer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1

[node name="StatsLabel" type="Label" parent="VBox/Footer"]
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.8)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 16
text = "1/2"

[node name="SwirlOverlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
material = ExtResource("2")
visible = false
